add database enties
